--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      Количество очков:
-      <span id="points">0</span>
-    </div>
-    <div>
-      Количество очков в секунду:
-      <span id="points-per-second">1</span>
-    </div>
-    <div>
-      <input
-        id="upgrade-ppt-btn"
-        type="button"
-        value="Улучшить количество очков за тик"
-      />
-      Цена:
-      <span id="upgrade-ppt-price">50</span>
-    </div>
-    <div>
-      <input
-        id="upgrade-time-interval-btn"
-        type="button"
-        value="Уменьшить интервал"
-      />
-      Цена:
-      <span id="upgrade-time-interval-price">50</span>
+    <div class="board">
+      <div>
+        Количество очков:
+        <span id="points">0</span>
+      </div>
+      <div>
+        Количество очков в секунду:
+        <span id="points-per-second">1</span>
+      </div>
+      <div>
+        <input
+          id="upgrade-ppt-btn"
+          type="button"
+          value="Улучшить количество очков за тик"
+        />
+        Цена:
+        <span id="upgrade-ppt-price">50</span>
+      </div>
+      <div>
+        <input
+          id="upgrade-time-interval-btn"
+          type="button"
+          value="Уменьшить интервал"
+        />
+        Цена:
+        <span id="upgrade-time-interval-price">50</span>
+      </div>
     </div>
 
     <script src="index.js"></script>
